# SophisticatedSystem

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
src/math/: simple_math.cpp  simple_math.h
tests/: CMakeLists.txt  math_test.cpp
